--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ciae<!DOCTYPE html>
 <html>
   <head>
     <title>Elastic Beanstalk</title>
@@ -74,7 +74,7 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>Congratulations</h1>
+      <h1>Appreciate for your time</h1>
       <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
