--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ ciae<!DOCTYPE html>
   </head>
   <body>
     <div class="textColumn">
-      <h1>Appreciate for the time</h1>
+      <h1>Congratulations your Code Build pass</h1>
       <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
