--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ ciae<!DOCTYPE html>
 
         text-align: right;
         padding-top: 11em;
-        background-color: orange;
+        background-color: blue;
 
       }
       .textColumn p {
